Changelog
=========

3.0.13 (unreleased)
-------------------

- Nothing changed yet.


3.0.12 (2018-12-05)
-------------------

- Fix querystring generation for rss search view.
  [cekk]

3.0.11 (2018-12-05)
-------------------

- Removed plone.directives import.
  [daniele]

3.0.10 (2018-11-20)
-------------------

- Remove unused translations.
  [cekk]

3.0.9 (2018-11-20)
------------------

- Fix translations.
  [cekk]

3.0.8 (2018-02-26)
------------------

- Fix css styles and templates for titles [nzambello]


3.0.7 (2018-02-07)
------------------

- Fix css styles and templates [nzambello]


3.0.6 (2018-02-02)
------------------

- Fix css styles [nzambello]


3.0.5 (2018-02-02)
------------------
- Added ISelectableConstrainTypes behavior
  [daniele]
- Fix scadenza dates in views and tiles
  [cekk]
- Add menuitems entries
  [cekk]
- Fix collection view names
  [cekk]
- Fix templates and styles [nzambello]


3.0.4 (2018-01-29)
------------------

- Enable topic sorting criteria
  [cekk]
- Show text in collection view
  [cekk]
- Fix indexer for getScadenza_bando. Now don't add 1 day if the hour is set to 00:00
  [cekk]

3.0.3 (2018-01-28)
------------------

- Add versioning to folder deepenings.
  [eikichi18]
- Fix collection view for anonymous
  [cekk]


3.0.2 (2018-01-04)
------------------

- Add purge="False" to versioning profiles. This avoid override other content-types settings
  [cekk]


3.0.1 (2017-12-29)
------------------

- Added/fixed styles [nzambello]


3.0.0 (2017-12-21)
------------------

- Drop AT support and add Dx contents [eikichi18]
- Substituited formlib portlets with z3c.form portlets [eikichi18]
- Fixed check pubblication date [eikichi18]
- Removed old i18n traductions [eikichi18]
- Added uninstall profile [eikichi18]
- Delete all Topic's references [eikichi18]
- Update README [eikichi18]
- Update classifiers in setup.py [eikichi18]
- Update traduction [eikichi18]
- Fixed bando-right template [nzambello]