@@ -24,6 +24,7 @@
  <property name="behaviors">
   <element value="plone.app.dexterity.behaviors.metadata.IDublinCore"/>
   <element value="plone.app.content.interfaces.INameFromTitle"/>
+  <element value="plone.app.dexterity.behaviors.id.IShortName"/>
   <element value="plone.app.dexterity.behaviors.exclfromnav.IExcludeFromNavigation"/>
   <element value="plone.app.versioningbehavior.behaviors.IVersionable" />
   <element value="Products.CMFPlone.interfaces.constrains.ISelectableConstrainTypes" />
