@@ -4,7 +4,8 @@ Changelog
 3.0.13 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Add IShortName behavior fo Folder Deepening.
+  [cekk]
 
 
 3.0.12 (2018-12-05)
